<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingTop="20dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBack">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/imgGuildline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.18" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/imgGuildline2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.82" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgDataNotSaved"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:layout_constraintEnd_toStartOf="@+id/imgGuildline2"
                    app:layout_constraintStart_toEndOf="@id/imgGuildline1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_data_not_saved" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    style="@style/TextNotoStyle.TextH5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/skipAuthTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgDataNotSaved" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSubtitle"
                    style="@style/TextNotoStyle.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/skipAuthSubtitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFirst"
                    style="@style/ButtonPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/btnFirstText"
                    app:layout_constraintBottom_toTopOf="@+id/btnSecond"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
                    app:layout_constraintVertical_bias="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSecond"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:background="@color/transparent"
                    android:text="@string/btnSecondText"
                    android:textAppearance="@style/TextNotoStyle.Body1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>